# simplethread

./: .editorconfig  .gitignore  .gitlab-ci.yml  Makefile  mypy.ini  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
simplethread/: decorators.py  protocols.py  thread.py
tests/: test_decorators.py  test_protocols.py
