[metadata]
name = simplethread
version = 0.1.2b0
author = Andrew Malchuk
author_email = andrew.malchuk@yandex.ru
description = Some useful utilities for threading module
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
url = https://gitlab.com/amalchuk/simplethread
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed
project_urls =
    Bug Reports = https://gitlab.com/amalchuk/simplethread/issues
    Source = https://gitlab.com/amalchuk/simplethread

[options]
python_requires = >=3.6, <4.0
packages = simplethread
zip_safe = false

[options.extras_require]
development =
    coverage
    isort
    mypy
    pytest
    twine

[sdist]
formats = gztar

[tool:pytest]
addopts = --exitfirst --quiet
minversion = 6.1
testpaths = tests

[coverage:run]
branch = true
source = simplethread

[coverage:report]
precision = 2
skip_empty = true

[isort]
force_single_line = true
force_sort_within_sections = true
lexicographical = true
single_line_exclusions = typing
